SERVER-55336: Catalog cache refreshes are not being retried on SnapshotError when going through shard_local